--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multypile</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__top-title">
+                        <img src="images/header/title.png" alt="">
+                        <a href="#">Mart<span>Place</span></a>      
+                    </div>
+                    <div class="header__top-sell">
+                        <a href="#">Become a Seller</a>
+                    </div>
+                    <div class="header__top-box">
+                        <a class="header__top-btn" href="#">Login</a>
+                        <a class="header__top-btn" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <div class="header__menu-inner">
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">All Products</a></li>
+                            <li><a href="#">Wordpress</a></li>
+                            <li><a href="#">Festures</a></li>
+                            <li><a href="#">Pages</a></li>
+                        </ul>
+                    </nav>
+                    <div class="menu-search">
+                        <input type="text" placeholder="Search product here..." required>
+                        <button type="submit"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-
-    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
 </body>
+
 </html>
