--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                 <div class="header__top-inner">
                     <div class="header__top-title">
                         <img src="images/header/title.png" alt="">
-                        <a href="#">Mart<span>Place</span></a>      
+                        <a href="#">Mart<span>Place</span></a>
                     </div>
                     <div class="header__top-sell">
                         <a href="#">Become a Seller</a>
@@ -51,6 +51,41 @@
             </div>
         </div>
     </header>
+    <section class="search">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__content">
+                    <div class="search__content-title">
+                        Create Your Own <br>
+                        <span>Digital Product Marketplace</span>
+                    </div>
+                    <div class="search__content-text">
+                        MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+                    </div>
+                    <div class="search__content-btn">
+                        <a href="#">View All Products</a>
+                        <a href="#">Popular Products</a>
+                    </div>
+                </div>
+                <div class="search__box">
+                    <div class="bgi-1"></div>
+                    <div class="bgi-2"></div>
+                    <div class="bgi-main">
+                        <div class="bgi-main__content">
+                            <div class="bgi-main__box">
+                                <input type="text" placeholder="Search your products..." required>
+                                <div class="bgi-category">
+                                    All Categories
+                                    <button type="submit"></button>
+                                </div>
+                            </div>
+                            <button type="submit">Search Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
