finished search section

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
                                     <button type="submit"></button>
                                 </div>
                             </div>
-                            <button type="submit">Search Now</button>
+                            <button class="search__btn" type="submit">Search Now</button>
                         </div>
                     </div>
                 </div>
