added items section

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,48 @@
         </div>
     </section>
 
+    <section class="items">
+        <div class="container">
+            <div class="items__inner">
+                <div class="items__inner-box">
+                    <img src="images/items/item-1.png" alt="">
+                    <div class="box__title">
+                        Best UX Research
+                    </div>
+                    <div class="box__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+
+                <div class="items__inner-box">
+                    <img src="images/items/item-2.png" alt="">
+                    <div class="box__title">
+                        Fully Responsive
+                    </div>
+                    <div class="box__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+
+                <div class="items__inner-box">
+                    <img src="images/items/item-3.png" alt="">
+                    <div class="box__title">
+                        Buy & Sell Easily
+                    </div>
+                    <div class="box__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
