--- a/app/index.html
+++ b/app/index.html
@@ -129,10 +129,193 @@
         </div>
     </section>
 
+    <section class="slider">
+        <div class="container">
+            <div class="slider__inner">
+                <div class="slider__inner-title">
+                    Weekly Featured Products
+                </div>
+                <div class="slider__inner-items">
+                    <div>
+                        <div class="slider__inner-item">
+                            <div class="content__img" style="background-image: url(images/slider/slider-img.jpg);">
+                            </div>
+                            <div class="content__inner">
+                                <div class="content__title">
+                                    One Page Resume Template
+                                </div>
+                                <div class="content__author">
+                                    <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                    <a href="#">AazzTech</a>
+                                    <span><a href="#">WordPress</a></span>
+                                </div>
+                                <div class="content__text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the
+                                    mattis, leo quam aliquet congue
+                                    placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue justo
+                                    ut scelerisque.
+                                </div>
+                                <div class="content__tegs">
+                                    <a href="#">website</a>
+                                    <a href="#">plugin</a>
+                                    <a href="#">landing page</a>
+                                </div>
+                                <div class="content__bottom">
+                                    <div class="content__bottom-price">
+                                        <a href="#">$10 - $50</a>
+                                    </div>
+                                    <div class="content__bottom-num">
+                                        46
+                                        <span>634</span>
+                                    </div>
+                                    <div class="content__bottom-star">
+                                        <div class="rate-star"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="slider__inner-item">
+                            <div class="content__img" style="background-image: url(images/slider/slider-img.jpg);">
+                            </div>
+                            <div class="content__inner">
+                                <div class="content__title">
+                                    One Page Resume Template
+                                </div>
+                                <div class="content__author">
+                                    <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                    <a href="#">AazzTech</a>
+                                    <span><a href="#">WordPress</a></span>
+                                </div>
+                                <div class="content__text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the
+                                    mattis, leo quam aliquet congue
+                                    placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue justo
+                                    ut scelerisque.
+                                </div>
+                                <div class="content__tegs">
+                                    <a href="#">website</a>
+                                    <a href="#">plugin</a>
+                                    <a href="#">landing page</a>
+                                </div>
+                                <div class="content__bottom">
+                                    <div class="content__bottom-price">
+                                        <a href="#">$10 - $50</a>
+                                    </div>
+                                    <div class="content__bottom-num">
+                                        46
+                                        <span>634</span>
+                                    </div>
+                                    <div class="content__bottom-star">
+                                        <div class="rate-star"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="slider__inner-item">
+                            <div class="content__img" style="background-image: url(images/slider/slider-img.jpg);">
+                            </div>
+                            <div class="content__inner">
+                                <div class="content__title">
+                                    One Page Resume Template
+                                </div>
+                                <div class="content__author">
+                                    <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                    <a href="#">AazzTech</a>
+                                    <span><a href="#">WordPress</a></span>
+                                </div>
+                                <div class="content__text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the
+                                    mattis, leo quam aliquet congue
+                                    placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue justo
+                                    ut scelerisque.
+                                </div>
+                                <div class="content__tegs">
+                                    <a href="#">website</a>
+                                    <a href="#">plugin</a>
+                                    <a href="#">landing page</a>
+                                </div>
+                                <div class="content__bottom">
+                                    <div class="content__bottom-price">
+                                        <a href="#">$10 - $50</a>
+                                    </div>
+                                    <div class="content__bottom-num">
+                                        46
+                                        <span>634</span>
+                                    </div>
+                                    <div class="content__bottom-star">
+                                        <div class="rate-star"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="slider__inner-item">
+                            <div class="content__img" style="background-image: url(images/slider/slider-img.jpg);">
+                            </div>
+                            <div class="content__inner">
+                                <div class="content__title">
+                                    One Page Resume Template
+                                </div>
+                                <div class="content__author">
+                                    <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                    <a href="#">AazzTech</a>
+                                    <span><a href="#">WordPress</a></span>
+                                </div>
+                                <div class="content__text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the
+                                    mattis, leo quam aliquet congue
+                                    placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                    mattis,
+                                    leo quam aliquet congue justo
+                                    ut scelerisque.
+                                </div>
+                                <div class="content__tegs">
+                                    <a href="#">website</a>
+                                    <a href="#">plugin</a>
+                                    <a href="#">landing page</a>
+                                </div>
+                                <div class="content__bottom">
+                                    <div class="content__bottom-price">
+                                        <a href="#">$10 - $50</a>
+                                    </div>
+                                    <div class="content__bottom-num">
+                                        46
+                                        <span>634</span>
+                                    </div>
+                                    <div class="content__bottom-star">
+                                        <div class="rate-star"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
