--- a/app/index.html
+++ b/app/index.html
@@ -312,6 +312,255 @@
         </div>
     </section>
 
+    <section class="products">
+        <div class="container">
+            <div class="products__inner">
+                <div class="products__inner-title">
+                    Newest Release Products
+                </div>
+                <div class="products__inner-btn">
+                    <button type="button" data-filter=".category-plugins">Plugins</button>
+                    <button type="button" data-filter=".category-wordpress">WordPress</button>
+                    <button type="button" data-filter=".category-sitetemplate">Site Template</button>
+                    <button type="button" data-filter=".category-psdtamplate">PSD Template</button>
+                    <button type="button" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" data-filter=".category">User Interface</button>
+                    <button type="button" data-filter="all">Landing Page</button>
+                    <button type="button" data-filter=".category-software">Software</button>
+                </div>
+
+                <div class="products__inner-items">
+                    <div class="products__item mix category-plugins" data-order="1">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item mix category-wordpress" data-order="2">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item mix category-sitetemplate" data-order="3">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item mix category-joomla" data-order="4">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item mix category-software" data-order="5">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item mix category-psdtamplate" data-order="6">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="products__inner-show">
+                    <a href="#">All New Products</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
