added feed section

--- a/app/index.html
+++ b/app/index.html
@@ -561,6 +561,241 @@
         </div>
     </section>
 
+    <section class="feed">
+        <div class="container">
+            <div class="feed__inner">
+                <div class="feed__inner-title">
+                    Your Followers Feed
+                </div>
+                <div class="feed__inner-items">
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item feed__slider-item">
+                        <div class="products__item-img">
+                            <div class="img-hover">
+                                <a href="#">More Info</a>
+                                <a href="#">Live Demo</a>
+                            </div>
+                        </div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-author">
+                                <div class="avatar" style="background-image: url(images/slider/avatar.png);"></div>
+                                <a href="#">Theme-Valley</a>
+                                <span><a href="#">Plugin</a></span>
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="products__item-bottom">
+                            <div class="item__price">
+                                <a href="#">$20</a>
+                            </div>
+                            <div class="item__heart">
+                                90
+                            </div>
+                            <div class="item-star">
+                                <div class="rate-star"></div>
+                            </div>
+                            <div class="item__cart">
+                                <a href="#">246</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
