added fact section

--- a/app/index.html
+++ b/app/index.html
@@ -362,7 +362,7 @@
                                 <div class="rate-star"></div>
                             </div>
                             <div class="item__cart">
-                                <a href="#">246</a> 
+                                <a href="#">246</a>
                             </div>
                         </div>
                     </div>
@@ -791,6 +791,32 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="fact">
+        <div class="container">
+            <div class="fact__inner">
+                <div class="fact__box">
+                    38,436 <br>
+                    <span>items for sale</span>
+                </div>
+
+                <div class="fact__box2">
+                    3,736 <br>
+                    <span>total sales</span>
+                </div>
+
+                <div class="fact__box3">
+                    2,736 <br>
+                    <span>happy customers</span>
+                </div>
+
+                <div class="fact__box4">
+                    25,736 <br>
+                    <span>members</span>
                 </div>
             </div>
         </div>
