added advantages section

--- a/app/index.html
+++ b/app/index.html
@@ -822,6 +822,85 @@
         </div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__inner">
+                <div class="advantages__inner-title">
+                    Why Choose <span>MartPlace</span>
+                    <div class="advantages__title-text">Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo
+                    rumes fugats untras.</div> 
+                </div>
+                <div class="advantages__inner-content">
+                    <div class="advantages__item advantages__item-1">
+                        <div class="advantages__item-title advantages__item-title1">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+
+                    <div class="advantages__item advantages__item-2">
+                        <div class="advantages__item-title advantages__item-title2">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+
+                    <div class="advantages__item advantages__item-3">
+                        <div class="advantages__item-title advantages__item-title3">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+
+                    <div class="advantages__item advantages__item-4">
+                        <div class="advantages__item-title advantages__item-title4">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+
+                    <div class="advantages__item advantages__item-5">
+                        <div class="advantages__item-title advantages__item-title5">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+
+                    <div class="advantages__item advantages__item-6">
+                        <div class="advantages__item-title advantages__item-title6">
+                            One Time Payment
+                        </div>
+                        <div class="advantages__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
