--- a/app/index.html
+++ b/app/index.html
@@ -827,8 +827,9 @@
             <div class="advantages__inner">
                 <div class="advantages__inner-title">
                     Why Choose <span>MartPlace</span>
-                    <div class="advantages__title-text">Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo
-                    rumes fugats untras.</div> 
+                    <div class="advantages__title-text">Laborum dolo rumes fugats untras. Etharums ser quidem rerum
+                        facilis dolores nemis omnis fugats. Lid est laborum dolo
+                        rumes fugats untras.</div>
                 </div>
                 <div class="advantages__inner-content">
                     <div class="advantages__item advantages__item-1">
@@ -896,6 +897,96 @@
                             congue is laoreet elit metus.
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="marketing">
+        <div class="marketing__inner">
+            <div class="marketing__inner-buy">
+                <img src="images/marketing/icon-1.png" alt="">
+                <div class="buy__title">
+                    Sell Your Products
+                </div>
+                <div class="buy__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                </div>
+                <div class="buy__btn">
+                    <a href="#">Become an Author</a>
+                </div>
+            </div>
+
+            <div class="marketing__inner-sell">
+                <img src="images/marketing/icon-2.png" alt="">
+                <div class="sell__title">
+                    Start Shopping Today
+                </div>
+                <div class="sell__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                </div>
+                <div class="sell__btn">
+                    <a href="#">Start Shopping</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="feedback">
+        <div class="container">
+            <div class="feedback__inner">
+                <div class="feedback__inner-title">
+                    Our Clients <span>Feedback</span>
+                    <div class="feedback__title-text">
+                        Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats.
+                        Lid
+                        est laborum dolo
+                        rumes fugats untras.
+                    </div>
+                </div>
+                <div class="feedback__inner-content">
+                    <div class="feedback__content-box">
+                        <div class="box__author">
+                            <div class="box__author-img">
+                                <div class="avatar" style="background-image: url(images/feedback/item-1.png)"></div>
+                            </div>
+                            <div class="box__author-text">
+                                Taofiqul Hakim <br>
+                                <span>Product Designer</span>
+                            </div>
+                        </div>
+                        <div class="box__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                            mattis, leo quam aliquet diam
+                            congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                            the pharetra, justo ut
+                            scelerisque.
+                        </div>
+                    </div>
+
+                    <div class="feedback__content-box">
+                        <div class="box__author">
+                            <div class="box__author-img">
+                                <div class="avatar" style="background-image: url(images/feedback/item-1.png)"></div>
+                            </div>
+                            <div class="box__author-text">
+                                Saifullah Al Murtafee <br>
+                                <span>Product Designer</span>
+                            </div>
+                        </div>
+                        <div class="box__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                            mattis, leo quam aliquet diam
+                            congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                            the pharetra, justo ut
+                            scelerisque.
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback__inner-btn">
+                    <a href="#">View All Reviews</a>
                 </div>
             </div>
         </div>
