--- a/app/index.html
+++ b/app/index.html
@@ -992,6 +992,93 @@
         </div>
     </section>
 
+    <section class="news">
+        <div class="container">
+            <div class="news__inner">
+                <div class="news__inner-title">
+                    Latest <span>News</span> 
+                    <div class="news__title-text">
+                        Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo
+                        rumes fugats untras.
+                    </div>
+                </div>
+                <div class="news__inner-content">
+                    <div class="products__item">
+                        <div class="products__item-img"></div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="news__item-bottom">
+                            <div class="item__time">
+                                24 Feb 2017
+                            </div>
+                            <div class="item__comments">
+                                <a href="#">45</a>
+                            </div>
+                            <div class="item__views">
+                                345
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item">
+                        <div class="products__item-img"></div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="news__item-bottom">
+                            <div class="item__time">
+                                24 Feb 2017
+                            </div>
+                            <div class="item__comments">
+                                <a href="#">45</a>
+                            </div>
+                            <div class="item__views">
+                                345
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="products__item">
+                        <div class="products__item-img"></div>
+                        <div class="products__item-box">
+                            <div class="products__item-title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <div class="products__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="news__item-bottom">
+                            <div class="item__time">
+                                24 Feb 2017
+                            </div>
+                            <div class="item__comments">
+                                <a href="#">45</a>
+                            </div>
+                            <div class="item__views">
+                                345
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
