added support section

--- a/app/index.html
+++ b/app/index.html
@@ -1079,6 +1079,22 @@
         </div>
     </section>
 
+    <section class="support">
+        <div class="container">
+            <div class="support__inner">
+                <div class="support__inner-money">
+                    <img src="images/support/img-1.png" alt=""> <br>
+                    30 Days Money Back <span>Guarantee</span> 
+                </div>
+
+                <div class="support__inner-friend">
+                    <img src="images/support/img-2.png" alt=""> <br>
+                    Fast and Friendly <span>Support</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
