added banner section

--- a/app/index.html
+++ b/app/index.html
@@ -1095,6 +1095,22 @@
         </div>
     </section>
 
+    <section class="banner">
+        <div class="container">
+            <div class="banner__inner">
+                <div class="banner__inner-title">
+                    Ready to Join Our Marketplace!
+                </div>
+                <div class="banner__inner-text">
+                    Over 25,000 designers and developers trust the MartPlace.
+                </div>
+                <div class="banner__inner-btn">
+                    <a href="#">Join Us Today</a> 
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
